Update CompensationHistory and PositionHistory as we did with CurrentInformation